# Zoom-Chat-Anonymizer

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  pyproject.toml
.github/workflows/: python-publish.yml
zoom_chat_anonymizer/: anonymize_chat.py  main.py
zoom_chat_anonymizer/classes/: artemis.py  message.py  pause.py
zoom_chat_anonymizer/logic/: anonymize_chat.py  clean_artemis_file.py  create_html_from_markdown.py  create_pdf_from_markdown.py  sort_moodle_csv.py
