[tool.poetry]
name = "zoom-chat-anonymizer"
version = "0.1.0"
description = ""
authors = ["Patrick Stoeckle <patrick.stoeckle@tum.de>"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
